# polyphony

./: .gitignore  README.md  package.json
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
notes/: 01-rust-crate-and-yin.md  02-wasm-and-react-frontend.md  03-fft-and-chord-detection.md  session-01-summary.md
test-samples/: generate.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  ChordPage.tsx  TunerPage.tsx
